--- a/shopping-cart/netlify.toml
+++ b/shopping-cart/netlify.toml
@@ -1,4 +1,4 @@
 [build]
-  base = "" # Leave as an empty string if the build command runs from the root
-  publish = "build" # The directory where your build output is located
-  command = "npm run build"
+  base = ""  # Leave empty if the build command runs from the root
+  publish = "dist"  # Directory where Vite outputs build files
+  command = "npm run build"  # Build command
